[gd_scene load_steps=6 format=3 uid="uid://b41jwtbu0dvdu"]

[ext_resource type="Script" path="res://Levels/Login stuff/Login.gd" id="1_ki8xt"]
[ext_resource type="PackedScene" uid="uid://bc0sc1t1gdja4" path="res://Player/Player.tscn" id="2_5bg56"]
[ext_resource type="PackedScene" uid="uid://b11p88gw1kqfq" path="res://Levels/spawnpoint.tscn" id="3_pn10h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvywd"]
size = Vector2(1180, 116)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwh4d"]
bg_color = Color(0.27451, 0.290196, 0.286275, 1)

[node name="Login" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_ki8xt")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 265

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2
theme_override_font_sizes/font_size = 39
text = "Press Enter or Select To Join"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 324)

[node name="Player1" parent="." node_paths=PackedStringArray("SPAWNPOINT") groups=["Player"] instance=ExtResource("2_5bg56")]
position = Vector2(145, 230)
SPAWNPOINT = NodePath("../Spawnpoint1")

[node name="MoveLeftAction" parent="Player1/Controls" index="0"]
action = "move_left_1"

[node name="MoveRightAction" parent="Player1/Controls" index="1"]
action = "move_right_1"

[node name="JumpAction" parent="Player1/Controls" index="2"]
action = "jump_1"

[node name="DashAction" parent="Player1/Controls" index="3"]
action = "dash_1"

[node name="SlideAction" parent="Player1/Controls" index="4"]
action = "slide_1"

[node name="StompAction" parent="Player1/Controls" index="5"]
action = "stomp_1"

[node name="BlockAction" parent="Player1/Controls" index="6"]
action = "block_1"

[node name="CancelAction" parent="Player1/Controls" index="7"]
action = "cancel_1"

[node name="LookUpAction" parent="Player1/Controls" index="8"]
action = "aim_up_1"

[node name="LookDownAction" parent="Player1/Controls" index="9"]
action = "aim_down_1"

[node name="LookLeftAction" parent="Player1/Controls" index="10"]
action = "aim_left_1"

[node name="LookRightAction" parent="Player1/Controls" index="11"]
action = "aim_right_1"

[node name="Player2" parent="." node_paths=PackedStringArray("SPAWNPOINT") groups=["Player"] instance=ExtResource("2_5bg56")]
modulate = Color(0.486275, 0.945098, 0.878431, 1)
position = Vector2(420, 230)
SPAWNPOINT = NodePath("../Spawnpoint2")

[node name="MoveLeftAction" parent="Player2/Controls" index="0"]
action = "move_left_2"

[node name="MoveRightAction" parent="Player2/Controls" index="1"]
action = "move_right_2"

[node name="JumpAction" parent="Player2/Controls" index="2"]
action = "jump_2"

[node name="DashAction" parent="Player2/Controls" index="3"]
action = "dash_2"

[node name="SlideAction" parent="Player2/Controls" index="4"]
action = "slide_2"

[node name="StompAction" parent="Player2/Controls" index="5"]
action = "stomp_2"

[node name="BlockAction" parent="Player2/Controls" index="6"]
action = "block_2"

[node name="CancelAction" parent="Player2/Controls" index="7"]
action = "cancel_2"

[node name="LookUpAction" parent="Player2/Controls" index="8"]
action = "aim_up_2"

[node name="LookDownAction" parent="Player2/Controls" index="9"]
action = "aim_down_2"

[node name="LookLeftAction" parent="Player2/Controls" index="10"]
action = "aim_left_2"

[node name="LookRightAction" parent="Player2/Controls" index="11"]
action = "aim_right_2"

[node name="Player3" parent="." instance=ExtResource("2_5bg56")]
modulate = Color(0.807843, 0.211765, 0.192157, 1)
position = Vector2(761, 229)

[node name="MoveLeftAction" parent="Player3/Controls" index="0"]
action = "move_left_3"

[node name="MoveRightAction" parent="Player3/Controls" index="1"]
action = "move_right_3"

[node name="JumpAction" parent="Player3/Controls" index="2"]
action = "jump_4"

[node name="DashAction" parent="Player3/Controls" index="3"]
action = "dash_3"

[node name="SlideAction" parent="Player3/Controls" index="4"]
action = "slide_3"

[node name="StompAction" parent="Player3/Controls" index="5"]
action = "stomp_3"

[node name="BlockAction" parent="Player3/Controls" index="6"]
action = "block_3"

[node name="CancelAction" parent="Player3/Controls" index="7"]
action = "cancel_3"

[node name="LookUpAction" parent="Player3/Controls" index="8"]
action = "aim_up_3"

[node name="LookDownAction" parent="Player3/Controls" index="9"]
action = "aim_down_3"

[node name="LookLeftAction" parent="Player3/Controls" index="10"]
action = "aim_left_3"

[node name="LookRightAction" parent="Player3/Controls" index="11"]
action = "aim_right_3"

[node name="Player4" parent="." instance=ExtResource("2_5bg56")]
modulate = Color(0.254902, 0.564706, 0.337255, 1)
position = Vector2(1020, 229)

[node name="MoveLeftAction" parent="Player4/Controls" index="0"]
action = "move_left_4"

[node name="MoveRightAction" parent="Player4/Controls" index="1"]
action = "move_right_4"

[node name="JumpAction" parent="Player4/Controls" index="2"]
action = "jump_4"

[node name="DashAction" parent="Player4/Controls" index="3"]
action = "dash_4"

[node name="SlideAction" parent="Player4/Controls" index="4"]
action = "slide_4"

[node name="StompAction" parent="Player4/Controls" index="5"]
action = "stomp_4"

[node name="BlockAction" parent="Player4/Controls" index="6"]
action = "block_4"

[node name="CancelAction" parent="Player4/Controls" index="7"]
action = "cancel_4"

[node name="LookUpAction" parent="Player4/Controls" index="8"]
action = "aim_up_4"

[node name="LookDownAction" parent="Player4/Controls" index="9"]
action = "aim_down_4"

[node name="LookLeftAction" parent="Player4/Controls" index="10"]
action = "aim_left_4"

[node name="LookRightAction" parent="Player4/Controls" index="11"]
action = "aim_right_4"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(597, 315)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-18, 283)
shape = SubResource("RectangleShape2D_pvywd")

[node name="Panel" type="Panel" parent="."]
offset_left = -2.0
offset_top = 540.0
offset_right = 1152.0
offset_bottom = 657.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wwh4d")

[node name="Spawnpoint1" parent="." instance=ExtResource("3_pn10h")]
position = Vector2(145, 230)

[node name="Spawnpoint2" parent="." instance=ExtResource("3_pn10h")]
position = Vector2(420, 230)

[node name="Spawnpoint3" parent="." instance=ExtResource("3_pn10h")]
position = Vector2(761, 229)

[node name="Spawnpoint4" parent="." instance=ExtResource("3_pn10h")]
position = Vector2(1023, 229)

[editable path="Player1"]
[editable path="Player2"]
[editable path="Player3"]
[editable path="Player4"]
